<?xml version="1.0"?>
<package>
  <name>but_velodyne_proc</name>
  <version>0.0.5</version>
  <description>ROS nodes and nodelets for Velodyne 3D LIDARs HDL-32e which provide point cloud publishing and processing.</description>

  <maintainer email="spanel@fit.vutbr.cz">Michal Spanel</maintainer>

  <license>LGPL</license>
  
  <url type="website">http://ros.org/wiki/but_velodyne_proc</url>
  <url type="repository">https://github.com/robofit/but_velodyne</url>
  <url type="bugtracker">https://github.com/robofit/but_velodyne/issues</url>
  
  <author>Michal Spanel (spanel@fit.vutbr.cz)</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>velodyne_msgs</build_depend>
  <build_depend>velodyne_pointcloud</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>opencv</build_depend>
  <build_depend>roslint</build_depend>

  <run_depend>nodelet</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>velodyne_msgs</run_depend>
  <run_depend>velodyne_pointcloud</run_depend>
  <run_depend>costmap_2d</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>opencv</run_depend>
  
  <export>
    <nodelet plugin="${prefix}/nodelets.xml" />
  </export>
  
</package>
